[package]
name = "vpssqlbackup"
version = "0.1.0"
edition = "2021"

[dependencies]
job_scheduler = "1.2.1"
lazy_static = "1.4.0"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
simple_logger = "5.0.0"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
